<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--ENGLISH-->
    <string name="app_name" translatable="false">MinCal Widget</string>

    <!--configuration-->
    <string name="configuration">Configuration</string>
    <!--configuration - behaviour-->
    <string name="behaviour">Behaviour</string>
    <string name="start_week_day">Start day</string>
    <string name="calendar">Calendar</string>
    <string name="show_declined_events">Show declined events</string>
    <string name="focus_on_current_week">Focus on current week</string>
    <string name="open_calendar_into_clicked_day">Open calendar into clicked day</string>
    <string name="show_week_number">Show week number</string>
    <!--configuration - visible calendar selection-->
    <string name="visible_calendar_selection">Select visible calendars</string>
    <string name="visible_calendar_selection_default">"Default visible calendars"</string>
    <string name="visible_calendar_selection_custom">"Custom selection"</string>
    <!--configuration - appearance-->
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="symbol_set">Symbol set</string>
    <string name="symbol_colour">Symbol colour</string>
    <string name="transparency">Transparency</string>
    <string name="text_size">Text size</string>
    <!--configuration - about-->
    <string name="about">About</string>
    <string name="source">Source</string>
    <string name="language">Language</string>
    <string name="translate">Translate</string>
    <string name="version">Version</string>
    <!--configuration - buttons-->
    <string name="reset_settings">Reset settings</string>
    <string name="close">Close</string>
    <!--configuration - values - months-->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <!--configuration - values - days of the week-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!--configuration - values - days of the week abbreviated-->
    <string name="monday_abb">Mon</string>
    <string name="tuesday_abb">Tue</string>
    <string name="wednesday_abb">Wed</string>
    <string name="thursday_abb">Thu</string>
    <string name="friday_abb">Fri</string>
    <string name="saturday_abb">Sat</string>
    <string name="sunday_abb">Sun</string>
    <!--configuration - values - calendars-->
    <string name="gregorian">Gregorian</string>
    <string name="holocene">Holocene</string>
    <!--configuration - values - themes-->
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <!--configuration - values - symbol colours-->
    <string name="system_accent">System accent</string>
    <string name="cyan">Cyan</string>
    <string name="blue">Blue</string>
    <string name="mint">Mint</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <!--configuration - messages-->
    <string name="no_calendar_application">No calendar application found</string>
    <string name="no_browser_application">No browser application found</string>
</resources>
