<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configuration_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <View
        android:layout_width="180dp"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/txt_theme"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="@color/config_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/themeSpinner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/config_value" />

    </LinearLayout>

    <View
        android:layout_width="180dp"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/txt_first_day_of_week"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/start_week_day"
            android:textColor="@color/config_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/startWeekDaySpinner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/config_value" />

    </LinearLayout>

    <View
        android:layout_width="180dp"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/txt_symbol_set"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/symbol_set"
            android:textColor="@color/config_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/symbolSetSpinner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/config_value" />

    </LinearLayout>

    <View
        android:layout_width="180dp"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/txt_symbol_colour"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/symbol_colour"
            android:textColor="@color/config_label"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/symbolColourSpinner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/config_value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/source" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/applyButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/apply_changes" />

    </LinearLayout>

</LinearLayout>